Added STARTTLS functionality and auto negotiation based on well known ports
